[gd_scene load_steps=3 format=2]

[ext_resource path="res://Home.gd" type="Script" id=1]

[sub_resource type="Theme" id=1]

[node name="Home" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 1 )
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 465.0
margin_top = 248.0
margin_right = 559.0
margin_bottom = 352.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 94.0
margin_bottom = 14.0
text = "MENU"
align = 1

[node name="FileMenuButton" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 94.0
margin_bottom = 44.0
text = "File Menu"

[node name="ConfirmQuitButton" type="Button" parent="VBoxContainer"]
margin_top = 54.0
margin_right = 94.0
margin_bottom = 74.0
text = "Confirm Quit"

[node name="GraphButton" type="Button" parent="VBoxContainer"]
margin_top = 84.0
margin_right = 94.0
margin_bottom = 104.0
text = "Graph"

[connection signal="pressed" from="VBoxContainer/FileMenuButton" to="." method="_on_FileMenuButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ConfirmQuitButton" to="." method="_on_ConfirmQuitButton_pressed"]
[connection signal="pressed" from="VBoxContainer/GraphButton" to="." method="_on_GraphButton_pressed"]
